[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dagster-community-components"
version = "0.10.9"
description = "Community-maintained Dagster components — ingestion, transforms, IO managers, sensors, sinks, resources, and more."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Eric Thomas", email = "eric.thomas@dagsterlabs.com" },
]
keywords = ["dagster", "components", "data-engineering", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Minimal core deps — every Dagster project needs these. Per-component
# optional deps (snowflake-connector, s3fs, lakefs, etc.) are NOT pulled
# in here; install them yourself as your project uses each component.
dependencies = [
    "dagster>=1.10.0",
    "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://dagster-component-ui.vercel.app/"
Registry = "https://github.com/eric-thomas-dagster/dagster-component-templates"
CLI = "https://github.com/eric-thomas-dagster/dagster-community-components-cli"
Issues = "https://github.com/eric-thomas-dagster/dagster-component-templates/issues"

# Build configuration ─────────────────────────────────────────────────────────
#
# The repo is laid out with components under top-level dirs (assets/, resources/,
# etc.) for browsability. The wheel maps those into a single
# `dagster_community_components/` package via force-include so users can:
#
#     from dagster_community_components import OneHotEncodingComponent
#
# The lazy __init__.py lookup (generated by tools/generate_init.py) maps class
# names → component.py paths inside the installed package.

[tool.hatch.build.targets.wheel]
packages = ["dagster_community_components"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "dagster_community_components/assets"
"resources" = "dagster_community_components/resources"
"io_managers" = "dagster_community_components/io_managers"
"sensors" = "dagster_community_components/sensors"
"observations" = "dagster_community_components/observations"
"external_assets" = "dagster_community_components/external_assets"
"integrations" = "dagster_community_components/integrations"
"asset_checks" = "dagster_community_components/asset_checks"
"manifest.json" = "dagster_community_components/manifest.json"

[tool.hatch.build.targets.sdist]
include = [
    "/dagster_community_components",
    "/assets",
    "/resources",
    "/io_managers",
    "/sensors",
    "/observations",
    "/external_assets",
    "/integrations",
    "/asset_checks",
    "/manifest.json",
    "/README.md",
    "/LICENSE",
    "/tools",
]
